--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 SERVER_HOST=localhost
 SERVER_PORT=8080
+
+POSTGRESQL_HOST=localhost
+POSTGRESQL_USERNAME=username
+POSTGRESQL_PASSWORD=password
+POSTGRESQL_DBNAME=dbname
+POSTGRESQL_PORT=5432
