--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,26 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:alpine
     container_name: postgres
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydatabase
     volumes:
-      - ./containerdata:/var/lib/postgresql/data
+      - ./containerdata/postgres:/var/lib/postgresql/data
     networks:
       - myapp
     ports:
       - "5432:5432"
+
+  adminer:
+    image: adminer:latest
+    container_name: adminer
+    ports:
+      - "8089:8080"
+    networks:
+      - myapp
 
 networks:
   myapp:
