Feat/users endpoint (#2)
* chore: adding .vscode generated file to gitignore

* feat: define user model and repository interface

* feat: adding gotdotenv dependency

* feat: adding load config and object

* feat: using config from .env

* chore: tidy up project directory

* feat: adding makefile

* chore: update gitignore

* feat: adding db config

* feat: adding postgresql db initialisation

* feat: adding pgx dependency

* feat: adding docker compose

* feat: adding user repository implementation

* feat: adding migration

* fix: db connection

* fix: adding not null constraint

* feat: add insert many, fix naming

* feat: adding seeder exercutor and service

* feat: add depencies and seeder call

* feat: add seeder

* chore: add migration and seeder

* chore: adding dependencies and details

* chore: adding running time to seeder

* feat: adding user get all endpoint

* feat: adding initialization and new route

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 *.so
 *.dylib
 
+# Generated file binaries
+!bin/.gitkeep
+bin/*
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -20,3 +24,13 @@
 # Go workspace file
 go.work
 go.work.sum
+
+# vscode specific files
+.vscode/
+
+# container data
+!containerdata/.gitkeep
+containerdata/*
+
+# config files
+.env
